# ai-middle-service

./: .env.example  .gitignore  .gitmodules  API_LOGGING_README.md  IMPLEMENTATION_SUMMARY.md  README.md  README_ZH.md  SECURITY_SUMMARY.md  START_SERVICE.md
market-insight/health_tk_insight-master/backend/: .env.8100  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  models.json  pyproject.toml  requirements.txt  start.bat  start.sh  test_apis.py  test_e2e.py  test_result.html  启动指南.md
market-insight/health_tk_insight-master/backend/app/: __init__.py  celery_app.py  config.py  main.py
market-insight/health_tk_insight-master/backend/app/agents/: __init__.py  base.py  brand_health_agent.py  tiktok_insight_agent.py
market-insight/health_tk_insight-master/backend/app/api/: __init__.py
market-insight/health_tk_insight-master/backend/app/data_sources/: __init__.py  base.py  douyin.py  tavily_client.py  xiaohongshu.py
market-insight/health_tk_insight-master/backend/app/db/: __init__.py  models.py  session.py
market-insight/health_tk_insight-master/backend/app/llm/: __init__.py  openai_compat.py
market-insight/health_tk_insight-master/backend/app/middleware/: __init__.py  logging.py
market-insight/health_tk_insight-master/backend/app/models/: __init__.py  request.py  response.py  task.py
market-insight/health_tk_insight-master/backend/docs/: TODO.md  api.md  architecture.md  data_source_priority.md  development.md
market-insight/health_tk_insight-master/backend/tests/: __init__.py  test_agents.py  test_api.py
tc-api/: app.py  (+3 more)
(+108 files in other folders)
